// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout should navigate to photos tab 1`] = `
<Layout
  routes={
    Array [
      Object {
        "Component": [Function],
        "children": Array [
          Object {
            "Component": [Function],
            "path": "pixijs",
          },
          Object {
            "Component": [Function],
            "path": "babylonjs",
          },
        ],
        "path": "projects",
      },
      Object {
        "Component": [Function],
        "path": "photos",
      },
      Object {
        "Component": [Function],
        "children": Array [
          Object {
            "Component": [Function],
            "path": ":id",
          },
        ],
        "path": "posts",
      },
      Object {
        "Component": [Function],
        "path": "resume",
      },
    ]
  }
>
  <div>
    <nav
      aria-label="primary"
    >
      <ul>
        <li>
          <a
            onClick={[Function]}
          >
            jax reiff
          </a>
        </li>
        <li
          className=""
          id="nav-projects"
          key="projects"
        >
          <a
            onClick={[Function]}
          >
            projects
          </a>
        </li>
        <li
          className="undefined"
          id="nav-photos"
          key="photos"
        >
          <a
            onClick={[Function]}
          >
            photos
          </a>
        </li>
        <li
          className=""
          id="nav-posts"
          key="posts"
        >
          <a
            onClick={[Function]}
          >
            posts
          </a>
        </li>
        <li
          className=""
          id="nav-resume"
          key="resume"
        >
          <a
            onClick={[Function]}
          >
            resume
          </a>
        </li>
      </ul>
    </nav>
    <main />
  </div>
</Layout>
`;

exports[`layout should navigate to posts tab 1`] = `
<Layout
  routes={
    Array [
      Object {
        "Component": [Function],
        "children": Array [
          Object {
            "Component": [Function],
            "path": "pixijs",
          },
          Object {
            "Component": [Function],
            "path": "babylonjs",
          },
        ],
        "path": "projects",
      },
      Object {
        "Component": [Function],
        "path": "photos",
      },
      Object {
        "Component": [Function],
        "children": Array [
          Object {
            "Component": [Function],
            "path": ":id",
          },
        ],
        "path": "posts",
      },
      Object {
        "Component": [Function],
        "path": "resume",
      },
    ]
  }
>
  <div>
    <nav
      aria-label="primary"
    >
      <ul>
        <li>
          <a
            onClick={[Function]}
          >
            jax reiff
          </a>
        </li>
        <li
          className=""
          id="nav-projects"
          key="projects"
        >
          <a
            onClick={[Function]}
          >
            projects
          </a>
        </li>
        <li
          className=""
          id="nav-photos"
          key="photos"
        >
          <a
            onClick={[Function]}
          >
            photos
          </a>
        </li>
        <li
          className="undefined"
          id="nav-posts"
          key="posts"
        >
          <a
            onClick={[Function]}
          >
            posts
          </a>
        </li>
        <li
          className=""
          id="nav-resume"
          key="resume"
        >
          <a
            onClick={[Function]}
          >
            resume
          </a>
        </li>
      </ul>
    </nav>
    <main />
  </div>
</Layout>
`;

exports[`layout should navigate to projects tab 1`] = `
<Layout
  routes={
    Array [
      Object {
        "Component": [Function],
        "children": Array [
          Object {
            "Component": [Function],
            "path": "pixijs",
          },
          Object {
            "Component": [Function],
            "path": "babylonjs",
          },
        ],
        "path": "projects",
      },
      Object {
        "Component": [Function],
        "path": "photos",
      },
      Object {
        "Component": [Function],
        "children": Array [
          Object {
            "Component": [Function],
            "path": ":id",
          },
        ],
        "path": "posts",
      },
      Object {
        "Component": [Function],
        "path": "resume",
      },
    ]
  }
>
  <div>
    <nav
      aria-label="primary"
    >
      <ul>
        <li>
          <a
            onClick={[Function]}
          >
            jax reiff
          </a>
        </li>
        <li
          className="undefined"
          id="nav-projects"
          key="projects"
        >
          <a
            onClick={[Function]}
          >
            projects
          </a>
        </li>
        <li
          className=""
          id="nav-photos"
          key="photos"
        >
          <a
            onClick={[Function]}
          >
            photos
          </a>
        </li>
        <li
          className=""
          id="nav-posts"
          key="posts"
        >
          <a
            onClick={[Function]}
          >
            posts
          </a>
        </li>
        <li
          className=""
          id="nav-resume"
          key="resume"
        >
          <a
            onClick={[Function]}
          >
            resume
          </a>
        </li>
      </ul>
    </nav>
    <main />
  </div>
</Layout>
`;

exports[`layout should navigate to resume tab 1`] = `
<Layout
  routes={
    Array [
      Object {
        "Component": [Function],
        "children": Array [
          Object {
            "Component": [Function],
            "path": "pixijs",
          },
          Object {
            "Component": [Function],
            "path": "babylonjs",
          },
        ],
        "path": "projects",
      },
      Object {
        "Component": [Function],
        "path": "photos",
      },
      Object {
        "Component": [Function],
        "children": Array [
          Object {
            "Component": [Function],
            "path": ":id",
          },
        ],
        "path": "posts",
      },
      Object {
        "Component": [Function],
        "path": "resume",
      },
    ]
  }
>
  <div>
    <nav
      aria-label="primary"
    >
      <ul>
        <li>
          <a
            onClick={[Function]}
          >
            jax reiff
          </a>
        </li>
        <li
          className=""
          id="nav-projects"
          key="projects"
        >
          <a
            onClick={[Function]}
          >
            projects
          </a>
        </li>
        <li
          className=""
          id="nav-photos"
          key="photos"
        >
          <a
            onClick={[Function]}
          >
            photos
          </a>
        </li>
        <li
          className=""
          id="nav-posts"
          key="posts"
        >
          <a
            onClick={[Function]}
          >
            posts
          </a>
        </li>
        <li
          className="undefined"
          id="nav-resume"
          key="resume"
        >
          <a
            onClick={[Function]}
          >
            resume
          </a>
        </li>
      </ul>
    </nav>
    <main />
  </div>
</Layout>
`;

exports[`layout should render 1`] = `
<Layout
  routes={
    Array [
      Object {
        "Component": [Function],
        "children": Array [
          Object {
            "Component": [Function],
            "path": "pixijs",
          },
          Object {
            "Component": [Function],
            "path": "babylonjs",
          },
        ],
        "path": "projects",
      },
      Object {
        "Component": [Function],
        "path": "photos",
      },
      Object {
        "Component": [Function],
        "children": Array [
          Object {
            "Component": [Function],
            "path": ":id",
          },
        ],
        "path": "posts",
      },
      Object {
        "Component": [Function],
        "path": "resume",
      },
    ]
  }
>
  <div>
    <nav
      aria-label="primary"
    >
      <ul>
        <li>
          <a
            onClick={[Function]}
          >
            jax reiff
          </a>
        </li>
        <li
          className=""
          id="nav-projects"
          key="projects"
        >
          <a
            onClick={[Function]}
          >
            projects
          </a>
        </li>
        <li
          className=""
          id="nav-photos"
          key="photos"
        >
          <a
            onClick={[Function]}
          >
            photos
          </a>
        </li>
        <li
          className=""
          id="nav-posts"
          key="posts"
        >
          <a
            onClick={[Function]}
          >
            posts
          </a>
        </li>
        <li
          className=""
          id="nav-resume"
          key="resume"
        >
          <a
            onClick={[Function]}
          >
            resume
          </a>
        </li>
      </ul>
    </nav>
    <main />
  </div>
</Layout>
`;
